--- a/assignment1/assignment1.html
+++ b/assignment1/assignment1.html
@@ -25,5 +25,12 @@
       the internet, or don't hesitate to ask me!
     -->
     <h1>Matthew P. Schultz</h1>
+    <ul>
+      <li>Years ago, like 15 during my first degree, I built a simple page with images of Fiona Apple. CSS and non-sucky HTML had not been
+      invented yet.</li>
+      <li>Have worked with a few of those simple partially built sites provided by GoDady</li>
+      <li>Worked in a research lab. 4 years ago started a PHP, HTML, MySQL project for the lab. My boss decided he'd fallen in love with rails
+        so we switched to that a month or two in. A lot of initial overhead in rails. Before we completed the lab moved to Philly I retired to an Admin job and forgot
+        most of it. I was using git for that and am now reminded that while awesome getting it to work as expected takes a little time. And that's where I am at.</li>
   </body>
 </html>
