--- a/assignment1/assignment1.html
+++ b/assignment1/assignment1.html
@@ -26,7 +26,7 @@
     -->
     <h1>Matthew P. Schultz</h1>
     <ul>
-      <li>Years ago, like 15 during my first degree, I built a simple page with images of Fiona Apple. CSS and non-sucky HTML had not been
+      <li>A few years ago... OK like 15 during my first degree, I built a simple page with images of Fiona Apple. CSS and non-sucky HTML had not been
       invented yet.</li>
       <li>Have worked with a few of those simple partially built sites provided by GoDady</li>
       <li>Worked in a research lab. 4 years ago started a PHP, HTML, MySQL project for the lab. My boss decided he'd fallen in love with rails
